--- a/src/app/auth/register-establishment/register-establishment.component.html
+++ b/src/app/auth/register-establishment/register-establishment.component.html
@@ -1,13 +1,29 @@
 <div class="lateral">
     <div class="form-login">
-        <ion-title class="titulos">ESTABLECIMIENTO </ion-title>
+        <ion-title class="titulos">ESTABLISHMENT</ion-title>
         <div class="form-int">
             <ion-item color="btncolor">
                 <ion-label>Usuario</ion-label>
                 <ion-input></ion-input>
             </ion-item>
             <ion-item color="btncolor">
-                <ion-label>Contraseña</ion-label>
+                <ion-label>Nombre</ion-label>
+                <ion-input></ion-input>
+            </ion-item>
+            <ion-item color="btncolor">
+                <ion-label>Correo</ion-label>
+                <ion-input></ion-input>
+            </ion-item>
+            <ion-item color="btncolor">
+                <ion-label>Direccion</ion-label>
+                <ion-input></ion-input>
+            </ion-item>
+            <ion-item color="btncolor">
+                <ion-label>&nbsp;Contraseña</ion-label>
+                <ion-input></ion-input>
+            </ion-item>
+            <ion-item color="btncolor">
+                <ion-label>R.Contraseña</ion-label>
                 <ion-input></ion-input>
             </ion-item>
         </div>
