--- a/src/app/auth/register-user/register-user.component.scss
+++ b/src/app/auth/register-user/register-user.component.scss
@@ -12,3 +12,30 @@
     margin-top: 15%;
     margin-bottom: 10%;
 }
+
+.form-login {
+    margin-top: 20%;
+}
+
+.titulos {
+    color: white;
+}
+
+.form-int {
+    margin-top: 5%;
+}
+
+.div-final {
+    // background-color: red;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    bottom: 0px;
+    width: 100%;
+}
+
+.btnColor {
+    // R: 108, G:54,   B: 89, A: 100
+    background-color: rgb(108, 54, 89);
+    color: white;
+}
