--- a/src/app/show-details/show-details.page.html
+++ b/src/app/show-details/show-details.page.html
@@ -18,7 +18,7 @@
         unds {{totalunits}}
      </ion-label>
      <ion-label>
-       Total {{totalPrice}}
+       Total $ {{totalPrice}}
     </ion-label>
     </ion-item>
     
