show-detail page is updated

--- a/src/app/show-details/show-details.page.html
+++ b/src/app/show-details/show-details.page.html
@@ -22,6 +22,6 @@
     </ion-label>
     </ion-item>
     
-    <ion-button expand="block">Comprar</ion-button>
+    <ion-button expand="block" (click)="comprar()">Comprar</ion-button>
   </ion-list>
 </ion-content>
